--- a/HTML FILES/base.html
+++ b/HTML FILES/base.html
@@ -1,5 +1,6 @@
 <html>
     <head>
-        <title><b>The Website For The Startup Led By Artech Team</b></title>
+        <title><b>Shiv4nsh Develops</b></title>
     </head>
+    <body>The Website For The Startup Led By Artech Team</body>
 </html>
